# python-ipp

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .yamllint  Dockerfile.dev  MANIFEST.in  README.md  mypy.ini  package-lock.json  package.json  pyproject.toml  renovate.json  requirements.txt  requirements_dev.txt  requirements_test.txt  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml  labels.yml
.github/workflows/: ci.yml  labels.yaml  linting.yaml  pr-labels.yaml  publish.yml  release-drafter.yml  release.yml  requirements.txt  tests.yaml  typing.yaml
examples/: add_modify_printer.py  debug.py  execute.py  print_example.py  print_from_tray2.py  print_job.py  printer.py  ruff.toml
ipp/: __init__.py  __version__.py  const.py  enums.py  exceptions.py  ipp.py  models.py  parser.py  printer.py  serializer.py  tags.py
pyipp/: __init__.py  __version__.py  const.py  exceptions.py  ipp.py  models.py  parser.py  serializer.py  tags.py
src/pyipp/: __init__.py  const.py  enums.py  exceptions.py  ipp.py  models.py  parser.py  serializer.py  tags.py
tests/: __init__.py  mocks.py  ruff.toml  test_client.py  test_interface.py  test_ipp.py  test_models.py  test_parser.py  test_printer.py  test_serializer.py
tests/__snapshots__/: test_parser.ambr
